--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/mongoose": "^5.11.96",
+    "@types/swagger-ui-express": "^4.1.6",
     "nodemon": "^3.1.7",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.2"
@@ -32,6 +33,7 @@
     "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.6.3",
-    "nodejs-api": "file:"
+    "nodejs-api": "file:",
+    "swagger-ui-express": "^5.0.1"
   }
 }
