--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
       "forceConsistentCasingInFileNames": true,
       "outDir": "./dist",
       "typeRoots": ["./src/@types"],
+      "resolveJsonModule": true
     },
     "include": ["src/**/*.ts"],
     "exclude": ["node_modules", "dist"],
